--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 build/
 
 *.jar
+
+# Android related
+**/android/**/gradle-wrapper.jar
+**/android/.gradle
+**/android/captures/
+**/android/gradlew
+**/android/gradlew.bat
+**/android/local.properties
+**/android/**/GeneratedPluginRegistrant.java
+**/android/settings_aar.gradle
